e bera nje ndryshim

--- a/cv.html
+++ b/cv.html
@@ -1,4 +1,4 @@
-<h>Une jam Fisnik Mamuti</h>
+<h1>Une jam Fisnik Mamuti</h1>
 <h2>Jetoj ne Kumanove, Maqedoni</h2>
 <hr />
 <p>Synimi im eshte qe te behem nje programer i mire</p>
